--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "tsc-watch": "^6.0.0",
     "typedoc": "^0.23.26",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/inquirer": "^9.0.3",
+    "inquirer": "^9.1.5",
+    "lowdb": "^5.1.0"
   }
 }
