--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Grupo.js",
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node dist/Grupo.js\"",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
     "doc": "typedoc",
     "test": "mocha",
     "coverage": "nyc npm test && nyc report --reporter=lcov",
@@ -15,12 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.4",
+    "@types/inquirer": "^8.2.1",
+    "@types/lowdb": "^1.0.11",
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "chai": "^4.3.7",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
+    "inquirer": "^5.2.0",
+    "lowdb": "^1.0.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.3",
@@ -28,10 +32,5 @@
     "tsc-watch": "^6.0.0",
     "typedoc": "^0.23.26",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@types/inquirer": "^9.0.3",
-    "inquirer": "^9.1.5",
-    "lowdb": "^5.1.0"
   }
 }
