--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "doc": "typedoc",
     "test": "mocha",
     "coverage": "nyc npm test && nyc report --reporter=lcov",
-    "ejer": "tsc-watch --onSuccess \"node dist/Usuario.js\""
+    "ejer": "tsc-watch --onSuccess \"node dist/Gestor.js\""
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,8 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.3",
+    "rxjs": "^7.8.0",
+    "rxjs-compat": "^6.6.7",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.0",
     "typedoc": "^0.23.26",
